<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GaraponMate</string>
    <string name="helpUrl">https://sites.google.com/site/garaponmate/help</string>

    <string name="topPage">トップページ</string>
    <string name="settings">設定</string>
    <string name="add">追加</string>
    <string name="help">ヘルプ</string>
    <string name="account">アカウント</string>
    <string name="logout">ログアウト</string>
    <string name="syoboi">syoboi.jp</string>
    <string name="play">再生</string>
    <string name="general">全般</string>
    <string name="delete">削除</string>
    <string name="confirmRemoveAccountFmt">アカウント %1$s を履歴から削除しますか?</string>
    <string name="loginHistory">過去に使用したアカウント</string>
    <string name="searchCaptionFmt">%1$s (字幕)</string>
    <string name="deleteSearchParam">検索条件を削除</string>
    <string name="clearSearchHistory">検索履歴を消去</string>
    <string name="clearSearchHistoryCompleted">検索履歴を消去しました</string>
    <string name="reload">再読み込み</string>
    <string name="login">ログイン</string>
    <string name="confirmLogout">ログアウトしますか?</string>
    <string name="loginCompleted">ログインしました</string>
    <string name="useSyoboiServer">再生履歴を送信</string>
    <string name="useSyoboiServerSummary">GaraponMate開発者のサーバに再生履歴を送信し、各端末で再生履歴を共有します。タップすると説明画面が開きます。その先で認証を行うと利用可能になります。</string>
    <string name="fullScreen">フルスクリーン</string>
    <string name="url">URL</string>
    <string name="urlSummary">http://x.x.x.x/</string>

    <string name="downloading">ダウンロード中…</string>
    <string name="downloadComplete">ダウンロード完了</string>
    <string name="volumeOsd">音量 %d%%</string>
    <string name="screenBrightnessOsd">明るさ %d%%</string>
    <string name="user">ガラポンID</string>
    <string name="password">パスワード</string>
    <string name="empty">空</string>
    <string name="date">日付</string>
    <string name="duration">長さ</string>
    <string name="min">最小</string>
    <string name="max">最大</string>
    <string name="minute">分</string>
    <string name="ch">チャンネル</string>
    <string name="keyword">キーワード</string>
    <string name="download">ダウンロード</string>
    <string name="downloadError">ダウンロードエラー</string>
    <string name="confirmCancelDownload">ダウンロードをキャンセルしますか?</string>
    <string name="favoriteOnly">お気に入りのみ</string>
    <string name="favorite">お気に入り</string>
    <string name="home">ホーム</string>
    <string name="webBrowser">ブラウザ</string>
    <string name="chName">チャンネル名</string>
    <string name="nowBroadcasting">放送中</string>
    <string name="loading">読み込み中…</string>
    <string name="eitherIsRequired">いずれかが必須</string>
    <string name="eitherIsOptioinal">オプション</string>
    <string name="genre">ジャンル</string>
    <string name="genre0">ジャンル(大)</string>
    <string name="genre1">ジャンル(小)</string>
    <string name="filter">フィルタ</string>
    <string name="save">保存</string>
    <string name="apply">適用</string>
    <string name="saveSearchParam">検索条件を保存</string>
    <string name="notSelected">(未選択)</string>
    <string name="durationMinFmt">≧%1$d分</string>
    <string name="durationMaxFmt">≦%1$d分</string>
    <string name="durationMinMaxFmt">%1$d～%2$d分</string>
    <string name="searchHitCount">%1$d 件</string>
    <string name="useVideoView">Flashを使わない</string>
    <string name="useVideoViewSummary">Flashを使わない方法で動画を再生します。Flashを使った場合より安定性や性能が悪くなる場合があります。</string>
    <string name="returnFromFullScreen">フルスクリーン解除</string>
    <string name="bufferingFmt">バッファリング中…(%1$d%%)</string>
    <string name="caption">字幕</string>
    <string name="searchCaption">字幕を検索する</string>
    <string name="share">共有</string>
    <string name="pause">一時停止</string>
    <string name="ff">早送り</string>
    <string name="rew">巻き戻し</string>
    <string name="previous">前へ</string>
    <string name="next">次へ</string>
    <string name="player">再生方法</string>
    <string name="playPopup">ポップアップで再生</string>
    <string name="playWebView">Flashで再生</string>
    <string name="playVideoView">VideoViewで再生</string>
    <string name="playExternal">他のアプリで再生</string>
    
    <string-array name="playerEntries">
        <item>Flash</item>
        <item>VideoView</item>
        <item>ポップアップ(VideoView)</item>
        <item>他のアプリ</item>
    </string-array>
    
    <string-array name="playerEntryValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
    <string name="settingsWarning">設定でガラポンTVのID、パスワードを設定してください</string>
    <string name="errFormEmpty">入力してください</string>
    
    <string name="searchCondition">検索条件</string>
    <string name="searchConditionEmpty">「キーワード」「チャンネル」「ジャンル」「お気に入りのみ」のどれかを必ず設定する必要があります</string>
    
    <string name="browser">ブラウザ</string>
    <string name="search">検索</string>
    <string name="searchGaraponHint">検索</string>
    <string name="searchList">検索リスト</string>
    <string name="newSearch">検索条件を作成</string>
    <string name="searchListEmpty">保存された検索がありません</string>
    
    <string name="searchListSettings">検索リスト設定</string>
    <string name="title">タイトル</string>
    <string name="programDetail">番組詳細</string>
    <string name="description">詳細</string>
    <string name="titleOrDescription">タイトルまたは詳細</string>
    <string name="keywordOr">どれかを含む</string>
    <string name="keywordAnd">すべて含む</string>
    <string name="keywordNot">含まない</string>
    <string name="keywordHint">キーワード</string>
    <string name="emptySearchList">キーワードが設定されていません。設定でキーワードを設定するとキーワードに一致した番組が表示されます。</string>
    
    <string name="loginProgress">ログイン中…</string>
    <string name="wrongPassword">パスワードが違います</string>
    <string name="unknownUser">ガラポンIDが違います</string>
    <string name="unknownRegistkey">ガラポンTVが登録されていません(ガラポンTVのセットアップが完了していないかもしれません)</string>
    <string name="unknownIpAddress">ガラポンTVのIPアドレスが不明です(ガラポンTVのセットアップが完了していないかもしれません)</string>
    <string name="error">エラー</string>
    <string name="invalidParameter">パラメーターが異常です</string>
    <string name="authSyncError">認証同期エラー。IDとパスワードがガラポンTVサイトと同期されていません。ガラポンTVがインターネットに接続してあることを確認し、5分程度お待ちください</string>
    
    <string name="searchCh">チャンネル: %1$s</string>
</resources>