<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="user"
        android:singleLine="true"
        android:title="@string/user" />
    <EditTextPreference
        android:key="password"
        android:singleLine="true"
        android:title="@string/password" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/playerEntries"
        android:entryValues="@array/playerEntryValues"
        android:key="player"
        android:title="@string/player" />

    <!-- <Preference -->
    <!-- android:key="searchListSettings" -->
    <!-- android:title="@string/searchListSettings" /> -->

    <jp.syoboi.android.garaponmate.preference.HelpPreference />

</PreferenceScreen>