<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true" >

    <ScrollView
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="320dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <View
                android:layout_width="0dip"
                android:layout_height="4dip" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/error"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#a00" />

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:hint="@string/user"
                android:imeOptions="flagNoFullscreen"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <!-- パスワード -->

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:hint="@string/password"
                android:imeOptions="flagNoFullscreen"
                android:inputType="textPassword" />

            <!-- ログイン -->

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:minWidth="144dip"
                android:text="@string/login" />

            <!-- ログイン履歴 -->

            <LinearLayout
                android:id="@+id/loginHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dip"
                    android:paddingLeft="16dip"
                    android:paddingRight="16dp"
                    android:paddingTop="8dip"
                    android:text="@string/loginHistory"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:background="@drawable/list_divider_holo_light" />

                <LinearLayout
                    android:id="@+id/loginHistoryList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginProgress" />
    </LinearLayout>

</FrameLayout>